Remove text align from scss file and fix jsx file to handle changes

--- a/src/components/Homepage/Homepage.scss
+++ b/src/components/Homepage/Homepage.scss
@@ -11,7 +11,7 @@ div {
   }
 
   div {
-    text-align: center;
+    // text-align: center;
 
     .slogan {
       font-size: 17px;
